corrijo error responsive, linkeo btn encrip y desencrip a area secundaria

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content-principal="IE=edge">
-    <meta name="viewport" content-principal="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,11 +47,11 @@
                     </svg>Solo letras minúsculas y sin acentos.
                 </label> 
                 <div class="content-principal__area-principal-buttons">
-                    <input class="boton-encriptar" type="submit" value="Encriptar" id="boton-encriptar">
-                    <input class="boton-desencriptar" type="submit" value="Desencriptar" id="boton-desencriptar">
+                    <a href="#area-secundaria"><input class="boton-encriptar" type="submit" value="Encriptar" id="boton-encriptar"></a>
+                    <a href="#area-secundaria"><input class="boton-desencriptar" type="submit" value="Desencriptar" id="boton-desencriptar"></a>
                 </div>
             </div>
-            <div class="content-principal__area-secundaria">
+            <div class="content-principal__area-secundaria" id="area-secundaria">
                 <div id="div-desaparece" class="content-principal__area-secundaria-messagebox">
                     <img class="content-principal__area-secundaria-messagebox-img" src="assets/img/robot5.png">
                     <div>
@@ -70,8 +70,8 @@
     </main>
     <footer class="footer">
         <div class="footer__copyright">
-            <h4 class="footer__copyright-text">Copyright</h4>
             <h4 class="footer__copyright-text-icon">©</h4>
+            <h4 class="footer__copyright-text">2022</h4>
         </div>
         <div class="footer__powered">
             <h4 class="footer__powered-text"><svg class="footer__powered-text-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
