--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/banner/banner.css">
-    <link rel="stylesheet" href="./css/logo/logo.css">
     <link rel="stylesheet" href="./css/header/header.css">
     <link rel="stylesheet" href="./css/footer/footer.css">
     <link rel="stylesheet" href="./css/principal/principal.css">
@@ -76,7 +75,7 @@
         <div class="footer__powered">
             <h4 class="footer__powered-text"><svg class="footer__powered-text-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
                 <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z"/>
-              </svg>Coded by Gus De Llac</h4>
+              </svg>Coded by G. De Llac</h4>
         </div>
         <div class="footer__socialmedia">
             <ul class="footer__socialmedia-lista">
@@ -102,5 +101,6 @@
             </ul>
         </div>
     </footer>
+    <script type="module" src="./js/app.js"></script>
 </body>
 </html>
