--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/scroll-bar/scroll-bar.css">
     <link rel="stylesheet" href="./css/responsive/responsive.css">
     <title>TextEncryptor</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/encrypted-globe.256x256.png">
 </head>
 <body>
     <header class="header">
@@ -25,7 +26,7 @@
             </svg></a>
         </div>
         <div class="header__encryptor-title">
-            <h1 class="header__encryptor-title-text">Alura Encrypter</h1>
+            <h1 class="header__encryptor-title-text">Alura Encryptor</h1>
         </div>
 
         <div class="header__menu-nav">
