--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     </main>
     <footer class="footer">
         <div class="footer__copyright">
-            <h4 class="footer__copyright-text-icon">©</h4>
-            <h4 class="footer__copyright-text">2022</h4>
+            <!-- <h4 class="footer__copyright-text-icon">©</h4>
+            <h4 class="footer__copyright-text">2022</h4> -->
         </div>
         <div class="footer__powered">
             <h4 class="footer__powered-text"><svg class="footer__powered-text-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
                 <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z"/>
-              </svg>Coded by G. De Llac</h4>
+              </svg>Coded by G. De Llac | © 2022</h4>
         </div>
         <div class="footer__socialmedia">
             <ul class="footer__socialmedia-lista">
